fixed header spacing

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,4 +11,5 @@ h1 {
   font-size: 56px !important;
   font-family: 'Alliance', 'Inter', sans-serif;
   font-weight: 700 !important;
+  letter-spacing: 0;
 }
